// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test App component Search bar - input has value 1`] = `
<div>
  <div
    class="App"
  >
    <h1>
      Users
    </h1>
    <input
      class="input-box"
      placeholder="Search users"
      type="text"
      value="test"
    />
    <div
      class="flex"
    />
  </div>
</div>
`;

exports[`Test App component Search bar - input is empty 1`] = `
<div>
  <div
    class="App"
  >
    <h1>
      Users
    </h1>
    <input
      class="input-box"
      placeholder="Search users"
      type="text"
      value=""
    />
    <div
      class="flex"
    />
  </div>
</div>
`;

exports[`Test App component renders header text as Users 1`] = `
<div>
  <div
    class="App"
  >
    <h1>
      Users
    </h1>
    <input
      class="input-box"
      placeholder="Search users"
      type="text"
      value=""
    />
    <div
      class="flex"
    />
  </div>
</div>
`;
